# cplusplus

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt
2020_basic_setup/: CMakeLists.txt  README.md
2020_basic_setup/cmake/: StaticAnalyzers.cmake
2020_basic_setup/include/faculty/: Person.hpp  Student.hpp
2020_basic_setup/src/: CMakeLists.txt  main_person.cpp  main_student.cpp
2020_basic_setup/src/faculty/: Person.cpp  Student.cpp
callbacks/: CMakeLists.txt  callbacks.cpp
cmake/: CompilerWarnings.cmake  GoogleTest-CMakeLists.txt.in  SetupGoogleTest.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
functional_programming/count-lines/: CMakeLists.txt  imperative.cpp  transform.cpp
functional_programming/math/: CMakeLists.txt  vector_operations.cpp
google_test_samples/: CMakeLists.txt
google_test_samples/include/: sample1.h
google_test_samples/src/: sample1.cc
lvalues_and_rvalues/: CMakeLists.txt  lvalues_and_rvalues.cpp
move_semantics/: CMakeLists.txt  move_semantics.cpp
pointers_references/: CMakeLists.txt  pointers_references.cpp
smart_pointers/: CMakeLists.txt  smart_pointers.cpp
test/: CMakeLists.txt  sample1_unittest.cc
variant/: CMakeLists.txt  case_one.cpp
